language/move-lang/tests/move_check/typing/mutate_invalid.exp
error: 

   ┌── tests/move_check/typing/mutate_invalid.move:6:10 ───
   │
 6 │         *&mut 0 = false;
   │          ------ The type: integer
   │          ^^^^^^ Invalid mutation. New value is not valid for the reference
   │                   ----- Is not compatible with: 'bool'
   │

error: 

   ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
   │
 2 │     struct S { f: u64 }
   │                   --- Is not compatible with: 'u64'
   ·
 7 │         *&mut S{f:0}.f = &1;
   │          ^^^^^^^^^^^^^ Invalid mutation. New value is not valid for the reference
   │                          -- The type: '&{integer}'
   │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:8:10 ───
    │
  8 │         *foo(&mut 0) = (1, 0);
    │          ^^^^^^^^^^^ Invalid mutation. New value is not valid for the reference
    │                        ------ The type: '({integer}, {integer})'
    ·
 23 │     fun foo(x: &mut u64): &mut u64 {
    │                                --- Is not compatible with: 'u64'
    │

error: 

   ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
   │
 2 │     struct S { f: u64 }
   │                   --- Is not compatible with: 'u64'
   ·
 9 │         bar(&mut S{f:0}).f = ();
   │         ^^^^^^^^^^^^^^^^^^ Invalid mutation. New value is not valid for the reference
   │                              -- The type: '()'
   │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- Is not compatible with: 'u64'
    ·
 10 │         *&mut bar(&mut S{f:0}).f = &0;
    │          ^^^^^^^^^^^^^^^^^^^^^^^ Invalid mutation. New value is not valid for the reference
    │                                    -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- Is not compatible with: 'u64'
    ·
 11 │         baz().f = false;
    │         ^^^^^^^ Invalid mutation. New value is not valid for the reference
    │                   ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- Is not compatible with: 'u64'
    ·
 12 │         *&mut baz().f = false;
    │          ^^^^^^^^^^^^ Invalid mutation. New value is not valid for the reference
    │                         ----- The type: 'bool'
    │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:16:22 ───
    │
 16 │         let r = &mut S{ f: 0 };
    │                      --------- Is not compatible with: '0x8675309::M::S'
 17 │         *r = X { f: 1 };
    │          ^ Invalid mutation. New value is not valid for the reference
    │              ---------- The type: '0x8675309::M::X'
    │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- Is not compatible with: 'u64'
    ·
 19 │         r.f = &0;
    │         ^^^ Invalid mutation. New value is not valid for the reference
    │               -- The type: '&{integer}'
    │

error: 

    ┌── tests/move_check/typing/mutate_invalid.move:2:19 ───
    │
  2 │     struct S { f: u64 }
    │                   --- Is not compatible with: 'u64'
    ·
 20 │         *&mut r.f = ();
    │          ^^^^^^^^ Invalid mutation. New value is not valid for the reference
    │                     -- The type: '()'
    │

